# proactive-security

./: .gitignore  CLAUDE.md  PROJECT_PLAN.md  README.md  docker-compose.wazuh.yml  install.sh  package-lock.json  package.json  probe_8b.ts  probe_db.js  probe_gemini3.ts  probe_latest.ts  probe_models.ts  probe_prefix.ts  probe_pro.ts  probe_v1.ts  sentinelctl  test_ai.ts  test_ai_final.ts  tsconfig.base.json
apps/agent/: package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/agent/src/: ai.ts  ban.ts  cloud.ts  heartbeat.ts  index.ts  monitor.ts  parser.ts  pipeline.ts  rules.ts  telegram.ts  terminal.ts  watcher.ts  webhook.ts
apps/agent/src/bots/: verifier.ts
legacy_python_agent/: local_config.yml  pyproject.toml
legacy_python_agent/agent/sentinel/: ipc.py  main.py
legacy_python_agent/agent/sentinel/collector/: discovery.py  watcher.py
legacy_python_agent/agent/sentinel/config/: defaults.py  loader.py  schema.py
legacy_python_agent/agent/sentinel/detector/: pipeline.py
legacy_python_agent/agent/sentinel/detector/rules/: engine.py
legacy_python_agent/agent/sentinel/parser/: base.py  generic.py  nginx.py  ssh.py
legacy_python_agent/agent/sentinel/store/: database.py  models.py
legacy_python_agent/agent/sentinel/utils/: logging.py
legacy_python_agent/cli/sentinel_cli/: client.py  main.py
legacy_python_agent/cli/sentinel_cli/commands/: status.py  threats.py
tools/: clean.sh  configure_wazuh_integration.sh  fix_wazuh_config.sh  hard_reset_wazuh.sh  init_wazuh_indexer.sh
wazuh/: ossec.conf
wazuh/wazuh_indexer_ssl_certs/: certs.yml  config.yml
(+13 files in other folders)
